# Control.Client.Udp

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
docs/: Architecture.md
public/PiSubmarine/Control/Client/Udp/: Client.h
src/: CMakeLists.txt
src/PiSubmarine/Control/Client/Udp/: Client.cpp
test/: CMakeLists.txt
test/PiSubmarine/Control/Client/Udp/: ClientTest.cpp
